# llm-twin

./: .gitignore  README.md  pyproject.toml
configs/: digital_data_etl_maxime_labonne.yaml  digital_data_etl_paul_iusztin.yaml  end_to_end_data.yaml  evaluating.yaml  generate_instruct_datasets.yaml  generate_preference_datasets.yaml  training.yaml
llm_twin/: __init__.py  settings.py
llm_twin/application/crawlers/: __init__.py  base.py  custom_article.py  dispatcher.py  github.py
llm_twin/application/dataset/: constants.py  generation.py  utils.py
llm_twin/application/networks/: embeddings.py
llm_twin/application/preprocessing/: chunking_data_handlers.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
llm_twin/application/preprocessing/operations/: chunking.py
llm_twin/application/utils/: misc.py  split_user_full_name.py
llm_twin/domain/: __init__.py  chunks.py  cleaned_documents.py  dataset.py  documents.py  embedded_chunks.py  prompt.py  queries.py  types.py
llm_twin/domain/base/: nosql.py  vector.py
llm_twin/infrastructure/db/: mongo.py  qdrant.py
llm_twin/model/evaluation/: evaluate.py  sagemaker.py
llm_twin/model/finetuning/: finetune.py  requirements.txt  sagemaker.py
pipelines/: __init__.py  generate_datasets.py  training.py
steps/: __init__.py
steps/etl/: crawl_links.py  get_or_create_user.py
steps/evaluating/: evaluate.py
steps/feature_engineering/: __init__.py  clean.py  load_to_vector_db.py  query_data_warehouse.py  rag.py
steps/generate_datasets/: __init__.py  create_prompts.py  generate_intruction_dataset.py  generate_preference_dataset.py  push_to_huggingface.py  query_feature_store.py
steps/training/: train.py
tools/: data_warehouse.py  run.py
