[project]
name = "llm-twin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "poethepoet>=0.38.0",
    "tqdm>=4.67.1",
    "zenml[server]>=0.93.0",
    "pymongo>=4.15.5",
    "click>=8.1.3",
    "datasets>=4.8.4",
    "pydantic-settings==2.2.1",
    # Digital data ETL
    "selenium>=4.39.0",
    "chromedriver-autoinstaller>=0.6.4",
    "beautifulsoup4>=4.14.3",
    "html2text>=2025.4.15",
    # Feature engineering
    "qdrant-client==1.11.0",
    "sentence-transformers>=5.2.0",
    "langchain==0.2.14",
    # RAG
    "langchain-community==0.2.12",
    "langchain-google-genai>=1.0.10",
]

[tool.poe.tasks]
# Data pipelines
run-digital-data-etl-maxime = "python -m tools.run --run-etl --no-cache --etl-config-filename digital_data_etl_maxime_labonne.yaml"
run-digital-data-etl-paul = "python -m tools.run --run-etl --no-cache --etl-config-filename digital_data_etl_paul_iusztin.yaml"
run-digital-data-etl = [
    "run-digital-data-etl-maxime",
    "run-digital-data-etl-paul",
]
run-feature-engineering-pipeline = "python -m tools.run --no-cache --run-feature-engineering"
run-generate-instruct-datasets-pipeline = "python -m tools.run --no-cache --run-generate-instruct-datasets"
run-generate-preference-datasets-pipeline = "python -m tools.run --no-cache --run-generate-preference-datasets"
run-end-to-end-data-pipeline = "python -m tools.run --no-cache --run-end-to-end-data"

# Utility pipelines
run-export-data-warehouse-to-json = "python -m tools.data_warehouse --export-raw-data"
run-import-data-warehouse-from-json = "python -m tools.data_warehouse --import-raw-data"
